<resources>
    <string name="app_name">Sun Network</string>
    <string name="desc">Logo image</string>
    <string name="password_hint">Password</string>
    <string name="password_hint_repeat">Repeat password</string>
    <string name="create_account_button_text">create account</string>
    <string name="log_in_button_text">Log In</string>
    <string name="login_hint">Login</string>
    <string name="passwordError">Error: passwords don\'t match!</string>
</resources>
